--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-typical": "^0.1.3",
+    "react-vertical-timeline-component": "^3.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
