--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.5.2",
